update typos and error

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title>GalidoInc - eCommerce Website</title>
 
-  <title>galido - eCommerce Website</title>
+  <title>galidoinc - eCommerce Website</title>
 
 
   <!--
